--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
  	<link rel="stylesheet" href="leaflet/leaflet.css" />
  	<script src="leaflet/leaflet.js"></script>
- 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+ 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/map.css">
 	<script src="Plugins/money.js"></script>
 	<script src="localisation/currencies.json"></script>
