Move and new index
Moved files to thesis folder and added link

--- a/index.html
+++ b/index.html
@@ -1,107 +1,7 @@
-<!DOCTYPE HTML>
-<head>
-	<meta charset="UTF-8">
- 	<link rel="stylesheet" href="leaflet/leaflet.css" />
- 	<script src="leaflet/leaflet.js"></script>
- 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/map.css">
-	<script src="Plugins/money.js"></script>
-	<script src="localisation/currencies.json"></script>
-	<appendTo></appendTo>
-
-	<script type="text/javascript">
-		
-		function loadLanguage() {
-			var browserLanguages = navigator.languages ? navigator.languages : (navigator.language || navigator.userLanguage);
-			var availableLanguages = ["en", "zh", "ar", "hi", "es"];
-			selectedLanguage = matchLanguages(browserLanguages, availableLanguages);
-
-			loadLanguageFile(selectedLanguage);
-		}
-
-		function matchLanguages(browserLanguages, availableLanguages) {
-			var browserLanguage, availableLanguage, languageMatch;
-			//below chooses language based on ordered preference		
-			for (var i = 0; i < browserLanguages.length; i++) {
-				browserLanguage = browserLanguages[i].substr(0, 2);
-
-				for (var k = 0; k < availableLanguages.length; k++) {
-					availableLanguage = availableLanguages[k];
-
-					if (browserLanguage == availableLanguage) {
-						languageMatch = availableLanguage;
-						languageLong = browserLanguages[i]; 
-						k = availableLanguages.length;
-						i = browserLanguages.length;
-					}
-				}
-			}
-			return languageMatch;
-		}
-
-		function loadLanguageFile(selectedLanguage) {
-			var languageFile;
-			var translationFile = document.createElement("script");
-			var GeoJSONFile = document.createElement("script");
-			translationFile.setAttribute("type", "text/javascript");
-			GeoJSONFile.setAttribute("type", "text/javascript")
-
-			switch (selectedLanguage) {
-				case "en":
-					languageFile = "english";
-				break;
-
-				case "zh":
-					languageFile = "chinese";
-				break;
-
-				case "ar":
-					languageFile = "arabic";
-					loadTextDirection();
-				break;
-
-				case "hi":
-					languageFile = "hindi";
-				break;
-
-				case "es":
-					languageFile = "spanish";
-				break;
-			}
-
-			//Translation
-			translationFile.setAttribute("src", "localisation/Translation/" + languageFile + "-lang.json");
-			document.getElementsByTagName("appendTo")[0].appendChild(translationFile);
-
-			//GeoJSON
-			GeoJSONFile.setAttribute("src", "localisation/GeoJSON/" + languageFile + ".geo.json");
-			document.getElementsByTagName("appendTo")[0].appendChild(GeoJSONFile);
-
-
-		}
-
-		function loadTextDirection() {
-			cssFile = document.createElement("link");
-			cssFile.setAttribute("rel", "stylesheet")
-			cssFile.setAttribute("href", "css/text_direction.css");
-			document.getElementsByTagName("appendTo")[0].appendChild(cssFile);
-		}
-			
-			/*The below loads the map.js (main leaflet script) after the language file has been loaded
-			since map.js needs to access variables from the above appended files*/
-
-		loadLanguage();
-		window.onload = function() {
-
-			var mapjs = document.createElement("script");
-			mapjs.setAttribute("src", "map.js");
-			document.getElementsByTagName("appendTo")[0].appendChild(mapjs);
-		}
-	</script>
-</head>
+<!DOCTYPE html>
+<html>
 <body>
-	<div id="map"></div>
+<h1>Yousif Alireza</h1>
+<a href="./thesis/index.html">Thesis UNICEF</a>
 </body>
 </html>
-
-
