--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Yousif Alireza</h1>
-<a href="./thesis/index.html">Thesis UNICEF</a>
+Link to: <a href="./thesis/index.html">Thesis UNICEF</a>
 </body>
 </html>
