--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Yousif Alireza</h1>
-Link (must use Google Chrome):&nbsp<a href="./thesis/index.html">Thesis UNICEF</a>&nbsp&nbsp&nbsp<a href="./readme.html">README(Abstract)</a>
+Link (must use Google Chrome):&nbsp<a href="./thesis/index.html">Thesis UNICEF</a>&nbsp&nbsp&nbsp<a href="./readme.html">README</a>
 </body>
 </html>
