Added head to index and copy file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
 <!DOCTYPE html>
 <html>
+<head>
+		<head>
+		<link rel="manifest" href="/manifest.json" />
+			<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+			<script>
+			  var OneSignal = window.OneSignal || [];
+			  OneSignal.push(function() {
+			    OneSignal.init({
+			      appId: "90a49c31-a1a9-476a-899d-96e290986ac2",
+			    });
+			  });
+			</script>
+		
+	</head>
+
+</head>
 <body>
 <h1>Yousif Alireza</h1>
 Link (must use Google Chrome):&nbsp<a href="./thesis/index.html">Thesis UNICEF</a>&nbsp&nbsp&nbsp<a href="./readme.html">README</a>
