--- a/push/index.html
+++ b/push/index.html
@@ -1,5 +1,17 @@
 <html>
-
+	<head>
+		<link rel="manifest" href="/manifest.json" />
+			<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+			<script>
+			  var OneSignal = window.OneSignal || [];
+			  OneSignal.push(function() {
+			    OneSignal.init({
+			      appId: "90a49c31-a1a9-476a-899d-96e290986ac2",
+			    });
+			  });
+			</script>
+		
+	</head>
 Push
 
 </html>
